// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addUserOrderToDB 1`] = `
Object {
  "account": "0xAccount",
  "amount": 456,
  "balance": 123,
  "createdAt": 1111111111,
  "currentSequence": 2,
  "expiry": 1234567890,
  "fee": 1,
  "feeAsset": "feeAsset",
  "fill": 234,
  "initialSequence": 1,
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "price": 0.123456789,
  "processed": true,
  "side": "bid",
  "status": "status",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`addUserOrderToDB error 1`] = `
Object {
  "account": "0xAccount",
  "amount": 456,
  "balance": 123,
  "createdAt": 1111111111,
  "currentSequence": 2,
  "expiry": 1234567890,
  "fee": 1,
  "feeAsset": "feeAsset",
  "fill": 234,
  "initialSequence": 1,
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "price": 0.123456789,
  "processed": false,
  "side": "bid",
  "status": "status",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`getAllLiveOrdersInPersistence add and update in redis 1`] = `
Object {
  "0xOrderHash": "update",
}
`;

exports[`getAllLiveOrdersInPersistence only add in redis 1`] = `
Object {
  "0xOrderHash": "add",
}
`;

exports[`getAllLiveOrdersInPersistence only add in redis 2`] = `
Array [
  Array [
    "orders|cache|code1|code2",
  ],
]
`;

exports[`getAllLiveOrdersInPersistence update in redis and exist in db 1`] = `
Object {
  "0xOrderHash": "update",
}
`;

exports[`getLiveOrderInPersistence in add queue 1`] = `"liveOrder"`;

exports[`getLiveOrderInPersistence in update queue 1`] = `"liveOrder"`;

exports[`getLiveOrderInPersistence only in db 1`] = `
Object {
  "liveOrder": "test",
}
`;

exports[`getRawOrderInPersistence in add queue 1`] = `
Object {
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "signedOrder": "signedOrder",
}
`;

exports[`getRawOrderInPersistence in dynamo 1`] = `
Object {
  "orderHash": "0xOrderHash",
  "signedOrder": Object {
    "signature": "signature",
  },
}
`;

exports[`getRawOrderInPersistence in dynamo 2`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`getRawOrderInPersistence in dynamo but no signature 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`getRawOrderInPersistence in terminate queue 1`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "terminate|0xOrderHash",
    "add|0xOrderHash",
  ],
]
`;

exports[`getRawOrderInPersistence not in neither 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`persistOrder add 1`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|add|0xOrderHash",
    "{\\"method\\":\\"add\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"test\\":\\"liveOrder\\",\\"initialSequence\\":123,\\"currentSequence\\":123},\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder add 2`] = `
Array [
  Array [
    "orders|queue",
    "code1|code2|add|0xOrderHash",
  ],
]
`;

exports[`persistOrder add 3`] = `
Array [
  Array [
    "orders|pubsub|code1|code2",
    "{\\"method\\":\\"add\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"test\\":\\"liveOrder\\",\\"initialSequence\\":123,\\"currentSequence\\":123},\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder add 4`] = `
Array [
  Array [
    Object {
      "currentSequence": 123,
      "initialSequence": 123,
      "test": "liveOrder",
    },
    "add",
    "status",
    "requestor",
    false,
  ],
]
`;

exports[`persistOrder not add 1`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|method|0xOrderHash",
    "{\\"method\\":\\"method\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":1,\\"balance\\":80}}",
  ],
]
`;

exports[`persistOrder not add 2`] = `
Array [
  Array [
    "orders|queue",
    "code1|code2|method|0xOrderHash",
  ],
]
`;

exports[`persistOrder not add 3`] = `
Array [
  Array [
    "orders|pubsub|code1|code2",
    "{\\"method\\":\\"method\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":1,\\"balance\\":80}}",
  ],
]
`;

exports[`persistOrder not add 4`] = `
Array [
  Array [
    Object {
      "amount": 100,
      "balance": 80,
      "currentSequence": 123,
      "fill": 1,
    },
    "method",
    "status",
    "requestor",
    false,
  ],
]
`;

exports[`persistOrder terminate fill 1`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|terminate|0xOrderHash",
    "{\\"method\\":\\"terminate\\",\\"status\\":\\"fill\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":100,\\"balance\\":0}}",
  ],
]
`;

exports[`persistOrder terminate fill 2`] = `
Array [
  Array [
    "orders|queue",
    "code1|code2|terminate|0xOrderHash",
  ],
]
`;

exports[`persistOrder terminate fill 3`] = `
Array [
  Array [
    "orders|pubsub|code1|code2",
    "{\\"method\\":\\"terminate\\",\\"status\\":\\"fill\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":100,\\"balance\\":0}}",
  ],
]
`;

exports[`persistOrder terminate fill 4`] = `
Array [
  Array [
    Object {
      "amount": 100,
      "balance": 0,
      "currentSequence": 123,
      "fill": 100,
    },
    "terminate",
    "fill",
    "requestor",
    false,
  ],
]
`;

exports[`processOrderQueue add 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`processOrderQueue add 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue add 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "price": 0.123456789,
      "side": "bid",
    },
    "add",
    "status",
    "requestor",
    true,
  ],
]
`;

exports[`processOrderQueue add 4`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|add|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue add 5`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|add|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue empty queue 1`] = `
Array [
  Array [
    "orders|queue",
  ],
]
`;

exports[`processOrderQueue failed 1`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|add|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue in queue but no key value 1`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|method|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue terminate 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "price": 0.123456789,
      "side": "bid",
    },
    "terminate",
    "status",
    "requestor",
    true,
  ],
]
`;

exports[`processOrderQueue terminate 4`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|terminate|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 5`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|terminate|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue update 1`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue update 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "price": 0.123456789,
      "side": "bid",
    },
    "update",
    "status",
    "requestor",
    true,
  ],
]
`;

exports[`processOrderQueue update 3`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|update|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue update 4`] = `
Array [
  Array [
    "orders|cache|code1|code2",
    "code1|code2|update|0xOrderHash",
  ],
]
`;

exports[`subscribeOrderUpdate 1`] = `
Array [
  Array [
    "orders|pubsub|code1|code2",
  ],
]
`;

exports[`subscribeOrderUpdate 2`] = `
Array [
  Array [
    "orders|pubsub|code1|code2",
  ],
]
`;
